--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   var tompositif = 'Mau';
   var tomnegatif = 'Engga';
     
-    async function menuju(){pesanwhatsapp = "Makasii udah buka " + nama + " Happy birthday >_<";await swals.fire('OK!', 'Kirim jawabannya ke WhatsApp aku, ya!', 'success');window.location = "https://api.whatsapp.com/send?phone=085921951588&text=" + pesanwhatsapp;}
+    async function menuju(){pesanwhatsapp = "Makasii udah buka " + nama + " Happy birthday >_<";await swals.fire('OK!', 'Kirim jawabannya ke WhatsApp aku, ya!', 'success');window.location = "https://api.whatsapp.com/send?phone=+6285921951588&text=" + pesanwhatsapp;}
 </script>
 <script src="https://malasid.github.io/html/hbd.js"></script>
 <!-- Sampai Sini -->
